--- a/docs/src/styles/index.css
+++ b/docs/src/styles/index.css
@@ -1,6 +1,32 @@
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+::-webkit-scrollbar-track {
+    background: var(--bs-secondary);
+}
+  
+::-webkit-scrollbar-thumb {
+    background: rgba(55, 94, 148, 0.4);
+    border-radius: var(--bs-border-radius);
+}
+  
+.brillo-8 {
+    transition: all 0.6s ease-in-out;
+}
+
+.brillo-8:hover {
+    transform: scale(1.02);
+}
+
+.desktop-only {
+    display: block;
+}
+
 .icon-32, .icon-24 {
     margin-top: -4px;
     padding-right: 4px;
+    padding-left: 4px;
 }
 
 .icon-32 {
@@ -11,4 +37,10 @@
 .icon-24 {
     width: 24px;
     height: 24px;
+}
+
+@media only screen and (max-width: 600px) {
+    .desktop-only {
+        display: none;
+    }
 }
