--- a/docs/src/styles/index.css
+++ b/docs/src/styles/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
+* {
+    font-family: "Montserrat";
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -5,7 +11,7 @@
 ::-webkit-scrollbar-track {
     background: var(--bs-secondary);
 }
-  
+
 ::-webkit-scrollbar-thumb {
     background: rgba(55, 94, 148, 0.4);
     border-radius: var(--bs-border-radius);
